[UI] Fix invisible cell in graph

--- a/app/haystackui/views/VSummaryContent/VSummaryContent.css
+++ b/app/haystackui/views/VSummaryContent/VSummaryContent.css
@@ -1,5 +1,5 @@
 .summary-content {
-  padding-top: 25px;
+  padding-top: 80px;
 }
 .summary-content__graph {
   width: 80%;
